--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/a_activity"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_activity_b"
@@ -22,15 +22,25 @@
         android:text="@string/b_activity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_activity_a"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_activity_a" />
 
     <Button
         android:id="@+id/btn_activity_c"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/c_activity"
-        app:layout_constraintTop_toBottomOf="@+id/btn_activity_b"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_activity_b" />
+
+    <Button
+        android:id="@+id/btn_to_baidu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/url_to_baidu"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_activity_c" />
 
 </android.support.constraint.ConstraintLayout>
