--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AActivity">
 
     <TextView
+        android:id="@+id/tv_activity_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/a_activity"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/a_activity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_test_hello_service"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/test_hello_service"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_activity_name" />
 
 </android.support.constraint.ConstraintLayout>
